[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Menu/Quitter.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menu/Quitter_hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Main_Menu_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/Main_Menu.png" type="Texture" id=4]
[ext_resource path="res://Scene/win/you_win.png" type="Texture" id=5]
[ext_resource path="res://Scene/win/win.gd" type="Script" id=6]
[ext_resource path="res://Assets/Menu/Restart.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/Restart_hover.png" type="Texture" id=8]

[node name="WinScene" type="Control"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 375.0
margin_top = 375.0
margin_right = 625.0
margin_bottom = 425.0

[node name="Restart" type="TextureButton" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Main Menu" type="TextureButton" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 250.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Quitter" type="TextureButton" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 250.0
margin_bottom = 158.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitter" to="." method="_on_Quitter_pressed"]
